fixed bugged navbar on mobile portrait (align center, not hiding on click)

--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -49,7 +49,6 @@ nav {
 @media (orientation: portrait) {
   
   nav{
-    align-items: center;
     height: 8vh;
   }
   }
